--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,14 @@ hs_err_pid*
 replay_pid*
 
 .gradle
+
+# Default ignored files
+.idea/shelf/
+.idea/workspace.xml
+# Editor-based HTTP Client requests
+.idea/httpRequests/
+# Datasource local storage ignored files
+.idea/dataSources/
+.idea/dataSources.local.xml
+
+build
